# streamlit-chat-prompt

./: LICENSE  MANIFEST.in  README.md  dev.py  example.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: workflow.yaml
docs/: example.py
examples/: default.py  example.py
streamlit_chat_prompt/: __init__.py  example.py
streamlit_chat_prompt/frontend/: declarations.d.ts  package-lock.json  package.json  tsconfig.json
streamlit_chat_prompt/frontend/src/: Prompt.tsx  index.tsx  logger.ts
streamlit_chat_prompt/frontend/src/components/: ChatInput.tsx  ClipboardInspector.tsx  PromptData.tsx  Props.tsx  State.tsx  TextField.tsx  Types.tsx
streamlit_chat_prompt/frontend/src/utils/: htmlProcessing.ts  images.ts  logger.ts  uuid.ts
template/: MANIFEST.in  setup.py
template/prompt/: __init__.py  example.py
template/prompt/frontend/: package.json
template/prompt/frontend/src/: Prompt.tsx  index.tsx
template/streamlit_chat_prompt/: __init__.py  example.py
template/streamlit_chat_prompt/frontend/: package.json
template/streamlit_chat_prompt/frontend/src/: Prompt.tsx
